v131
(xx/09/16)

Changes / Improvements / Optimizations:
Raspberry Pi | Image download updated to v130 and firmware 4.4.19: http://dietpi.com/download
General | USB drives will be mounted automaticaly to /mnt/usb_[index] when plugged in: https://github.com/Fourdee/DietPi/issues/501
General | Dedicated USB drive setup will now set the UUID in /etc/fstab
General | HFS+ filesystem is now supported on all DietPi images.

Bug fixes:

-----------------------------------------------------------------------------------------------------------

v130
(06/09/16)

New device:
NanoPi M2 DietPi image is now available. Many thanks to k-plan for sending me this tiny, but powerful board!: http://dietpi.com/phpbb/viewtopic.php?f=8&t=620#p2664

Changes / Improvements / Optimizations:
DietPi-Software | Uae4ARM | Amiga emulator for your Raspberry Pi. Collaboration with the creator of AmiBerry (Dimitris) to bring you the highest performance Amiga emulation, running on lightweight DietPi: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=64#p64
DietPi-Software | ARM64 | Squeezebox Server (Logitech Media Centre) and Squeezelite are now available for installation: https://github.com/Fourdee/DietPi/issues/354
DietPi-Software | Pi-hole | Installation updated to latest version 2.9: https://github.com/Fourdee/DietPi/issues/478
DietPi-Software | RPi monitor updated to latest version, thanks to WolfganP: https://github.com/Fourdee/DietPi/issues/238#issuecomment-241461096
DietPi-Software | You can now find the URL links for the online docs in the Help Menu. It will also list the URL links for each peice of software installed: https://github.com/Fourdee/DietPi/issues/483
DietPi-Software | xcompmgr is now installed by default with Xserver on ALL devices. Limits desktop composition effects to improve performance and reduce "moving window lag".