@@ -116,16 +116,19 @@ cpu_ondemand_sampling_rate=25000
 #sampling rate * down factor / 1000 = Miliseconds (40 = 1000ms when sampling rate is 25000)
 cpu_ondemand_sampling_down_factor=80
 
-#Samba Client Details (Used by DietPi-Config | Networking | Samba Client)
+#Samba Client Details (Used by DietPi-Config | Networking NAS | Samba Client)
 SambaClient_ComputerName=computername
 SambaClient_ShareName=sharename
 SambaClient_Username=username
 SambaClient_Password=password
 
-#FTP Client Filesystem Mount (CurlFtpFs) Details (Used by DietPi-Config | Networking | FTP Client)
+#FTP Client Filesystem Mount (CurlFtpFs) (Used by DietPi-Config | Networking NAS | FTP Client)
 curlftpfs_clientaddress=192.168.0.100
 curlftpfs_clientusername=username
 curlftpfs_clientpassword=password
+
+#NFS Client Filesystem Mount (Used by DietPi-Config | Networking NAS | NFS Client)
+nfsclient_ipaddress=
 
 #Proxy settings | System-wide proxy settings. Use dietpi-config > networking options to apply.
 proxy_enabled=0
