@@ -4,3 +4,4 @@ file:///mnt/dietpi_userdata DietPi User Data
 file:///mnt/usb_1 USB Drive
 file:///mnt/samba Samba Client
 file:///mnt/ftp_client FTP Client
+file:///mnt/nfs_client NFS Client
