@@ -14,7 +14,10 @@ tmpfs 			/DietPi 		tmpfs 	defaults,size=10m,noatime,nodev,nosuid,mode=1777	0 0
 /dev/sde1       /mnt/usb_5      auto     defaults,noatime,nofail,x-systemd.automount  0       0
 
 #Samba Client------------------------------------------------------
-#/mnt/samba . Please use dietpi-config and the networking menu to setup this mount
+#/mnt/samba . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
 
 #FTP Client Mount--------------------------------------------------
-#/mnt/ftp_client . Please use dietpi-config and the networking menu to setup this mount
+#/mnt/ftp_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
+
+#NFS Client Mount--------------------------------------------------
+#/mnt/nfs_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
