@@ -1,7 +1,7 @@
 userlist_deny=YES
-local_root=/root
+local_root=/mnt/dietpi_userdata
 listen=YES
-listen_ipv6=YES
+listen_ipv6=NO
 anonymous_enable=NO
 local_enable=YES
 write_enable=YES
