@@ -3496,19 +3496,71 @@ _EOF_
 
 		fi
 
+		#NFS Client
+		local nfsclient_installed=0
+		local nfsclient_status="Not Installed"
+		local nfsclient_menutext="Install now to access NFS shares"
+		local nfsclient_mounted_size="unknown"
+		local nfsclient_mounted_used="unknown"
+		local nfsclient_mounted_free="unknown"
+		if (( ${aSOFTWARE_INSTALL_STATE[110]:=0} == 2 )); then
+
+			nfsclient_installed=1
+			nfsclient_status="Unable to connect and/or incorrect details"
+			nfsclient_menutext="Input/Modify Details"
+
+			#Check if mount exists and is valid
+			if (( $(df -h | grep -ci -m1 '/mnt/nfs_client') == 1 )); then
+
+				#Get stats
+				nfsclient_mounted_size=$(df -h | grep -m1 '/mnt/nfs_client' | awk '{ print $2 }')
+				nfsclient_mounted_used=$(df -h | grep -m1 '/mnt/nfs_client' | awk '{ print $3 }')
+				nfsclient_mounted_free=$(df -h | grep -m1 '/mnt/nfs_client' | awk '{ print $4 }')
+				nfsclient_status="/mnt/nfs_client | Size $nfsclient_mounted_size | Used $nfsclient_mounted_used | Free $nfsclient_mounted_free"
+
+			fi
+
+		fi
+
 		WHIP_TITLE='DietPi - Network Options: NAS/Misc'
-		OPTION=$(whiptail --title "$WHIP_TITLE" --menu "\n Samba client : $sambaclient_status \n FTP client   : $curlftpfs_status\n NoIp status  : $noip_status" --cancel-button "$TEXT_MENU_BACK" --backtitle "$WHIP_BACKTITLE" 15 75 3 \
+		OPTION=$(whiptail --title "$WHIP_TITLE" --menu "\n Samba client : $sambaclient_status\n FTP client   : $curlftpfs_status\n NFS client   : $nfsclient_status\n NoIp status  : $noip_status" --cancel-button "$TEXT_MENU_BACK" --backtitle "$WHIP_BACKTITLE" 17 75 4 \
 		"Samba Client" "$sambaclient_menutext" \
 		"FTP Client" "$curlftpfs_menutext" \
+		"NFS Client" "$nfsclient_menutext" \
 		"NoIp" "$noip_menutext" 3>&1 1>&2 2>&3)
 
 		CHOICE=$?
 		if (( $CHOICE == 0 )); then
 			case "$OPTION" in
 
+				"NFS Client")
+
+					#Installed?
+					if (( ! $nfsclient_installed )); then
+
+						whiptail --title "Install NFS Client?" --yesno "NFS Client is not installed, would you like to install it now?\n\nThis will allow you access NFS shares." --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 12 65
+						CHOICE=$?
+						if (( $CHOICE == 0 )); then
+
+							#install nfsclient
+							/DietPi/dietpi/dietpi-software install 110
+
+						fi
+
+					else
+
+						/DietPi/dietpi/func/dietpi-set_nfsclient
+
+					fi
+
+					#Return to this Menu
+					TARGETMENUID=16
+
+				;;
+
 			  Samba*)
 				#Installed?
-				if (( $sambaclient_installed == 0 )); then
+				if (( ! $sambaclient_installed )); then
 
 					whiptail --title "Install Samba Client?" --yesno "Samba Client is not installed, would you like to install it now?\n\nThis will allow you access Windows shared folders, NAS and CIFS capable devices." --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 12 65
 					CHOICE=$?
@@ -3530,7 +3582,7 @@ _EOF_
 				;;
 			  FTP*)
 				#Installed?
-				if (( $curlftpfs_installed == 0 )); then
+				if (( ! $curlftpfs_installed )); then
 
 					whiptail --title "Install FTP Client?" --yesno "FTP Client (curlftpfs) is not installed, would you like to install it now? \n \n - This is required to mount an FTP connection to filesystem" --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 12 65
 					CHOICE=$?
@@ -3552,7 +3604,7 @@ _EOF_
 				;;
 			  NoIp)
 				#Installed?
-				if (( $noip_installed == 0 )); then
+				if (( ! $noip_installed )); then
 
 					local noip_url_address=''
 					whiptail --title "Install NoIp Client?" --yesno "NoIp Client is not installed, would you like to install it now?\n\n- NoIp will allow you to use a fixed web address, regardless of your internet IP\neg: MySuperDooperWebsite.noip2.biz would point to this device!" --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 13 70
