@@ -223,7 +223,6 @@
 
 	INDEX_DRIVE_BEING_EDITED=0
 
-
 	aDRIVE_UUID=()
 	aDRIVE_MOUNT_SOURCE=()
 	aDRIVE_MOUNT_TARGET=()
@@ -236,7 +235,6 @@
 	aDRIVE_ISAVAILABLE=()
 	aDRIVE_ISMOUNTED=()
 	aDRIVE_ISUUIDMOUNT=()
-
 
 	Refresh_Drives(){
 
