@@ -26,6 +26,7 @@
 		"transmission-daemon"
 		"proftpd"
 		"samba"
+		"nfs-kernel-server"
 		"vsftpd"
 		"apache2"
 		"nginx"
