@@ -218,7 +218,7 @@ _EOF_
 	# - Software
 	#NB: All software has a unique index that must not be changed (eg: DESKTOP_LXDE = 23)
 	TOTAL_SOFTWARE_INDEXS=0
-	TOTAL_SOFTWARE_INDEXS_HARDLIMIT=110 #Increase as needed. Must be higher than TOTAL_SOFTWARE_INDEXS once calculated in Software_Arrays_Init
+	TOTAL_SOFTWARE_INDEXS_HARDLIMIT=111 #Increase as needed. Must be higher than TOTAL_SOFTWARE_INDEXS once calculated in Software_Arrays_Init
 
 	INSTALLING_INDEX=0					#Which software index is currently being installed?
 
@@ -1321,12 +1321,22 @@ _EOF_
 				 aSOFTWARE_WHIP_DESC[$index_current]='alternative ftp server'
 			aSOFTWARE_CATEGORY_INDEX[$index_current]=15
 					  aSOFTWARE_TYPE[$index_current]=0
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]='?f=8&t=5&p=2820#p2820'
 
 		#------------------
 		index_current=96
 
 				 aSOFTWARE_WHIP_NAME[$index_current]='Samba'
 				 aSOFTWARE_WHIP_DESC[$index_current]='feature-rich file server'
+			aSOFTWARE_CATEGORY_INDEX[$index_current]=15
+					  aSOFTWARE_TYPE[$index_current]=0
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]='f=8&t=5&start=10#p56'
+
+		#------------------
+		index_current=109
+
+				 aSOFTWARE_WHIP_NAME[$index_current]='NFS'
+				 aSOFTWARE_WHIP_DESC[$index_current]='network file system server'
 			aSOFTWARE_CATEGORY_INDEX[$index_current]=15
 					  aSOFTWARE_TYPE[$index_current]=0
 			 aSOFTWARE_ONLINEDOC_URL[$index_current]='f=8&t=5&start=10#p56'
@@ -1420,7 +1430,7 @@ _EOF_
 				 aSOFTWARE_WHIP_DESC[$index_current]='access network shares'
 			aSOFTWARE_CATEGORY_INDEX[$index_current]=1
 					  aSOFTWARE_TYPE[$index_current]=1
-			 aSOFTWARE_ONLINEDOC_URL[$index_current]='dietpi-config > Network Options: NAS/Misc'
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]=' dietpi-config > Network Options: NAS/Misc'
 		#------------------
 		index_current=2
 
@@ -1428,7 +1438,15 @@ _EOF_
 				 aSOFTWARE_WHIP_DESC[$index_current]='ftp client with filesystem mount'
 			aSOFTWARE_CATEGORY_INDEX[$index_current]=1
 					  aSOFTWARE_TYPE[$index_current]=1
-			 aSOFTWARE_ONLINEDOC_URL[$index_current]='dietpi-config > Network Options: NAS/Misc'
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]=' dietpi-config > Network Options: NAS/Misc'
+		#------------------
+		index_current=110
+
+				 aSOFTWARE_WHIP_NAME[$index_current]='NFS Client'
+				 aSOFTWARE_WHIP_DESC[$index_current]='network file system client'
+			aSOFTWARE_CATEGORY_INDEX[$index_current]=1
+					  aSOFTWARE_TYPE[$index_current]=1
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]=' dietpi-config > Network Options: NAS/Misc'
 		#------------------
 
 		#File managers
@@ -2419,6 +2437,16 @@ _EOF_
 			Banner_Installing
 
 			AGI vsftpd --no-install-recommends
+
+		fi
+
+		#NFS_SERVER
+		INSTALLING_INDEX=109
+		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
+
+			Banner_Installing
+
+			AGI nfs-kernel-server nfs-common ucf rpcbind
 
 		fi
 
@@ -4581,6 +4609,18 @@ _EOF_
 
 		fi
 
+		INSTALLING_INDEX=110
+		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
+
+			Banner_Installing
+
+			#Remove information file
+			rm /mnt/nfs_client/readme.txt &> /dev/null
+
+			AGI nfs-common
+
+		fi
+
 		INSTALLING_INDEX=104
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
@@ -5434,14 +5474,24 @@ _EOF_
 
 		fi
 
-		# vsFTPD
+		#vsFTPD
 		INSTALLING_INDEX=95
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
-			cp /DietPi/dietpi/conf/vsftpd.conf /etc/vsftpd.conf
 			sed -i '/root/c\#root' /etc/ftpusers
 
-			sed -i "/local_root=/c\local_root=$FP_DIETPI_USERDATA_DIRECTORY" /etc/vsftpd.conf
+			cp /DietPi/dietpi/conf/vsftpd.conf /etc/vsftpd.conf
+			sed -i "/^local_root=/c\local_root=$FP_DIETPI_USERDATA_DIRECTORY" /etc/vsftpd.conf
+
+		fi
+
+		#NFS_SERVER
+		INSTALLING_INDEX=109
+		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
+
+			cat << _EOF_ > /etc/exports
+/mnt/dietpi_userdata *(rw,async,no_root_squash,fsid=0,crossmnt,no_subtree_check)
+_EOF_
 
 		fi
 
@@ -7708,6 +7758,10 @@ systemctl daemon-reload
 
 			AGP vsftpd
 
+		elif (( $1 == 109 )); then
+
+			AGP nfs-kernel-server
+
 		elif (( $1 == 67 )); then
 
 			update-rc.d noip2 remove
@@ -8116,9 +8170,21 @@ _EOF_
 			umount /mnt/samba &> /dev/null
 			AGP smbclient
 			#Disable in fstab
-			sed -i '/\/mnt\/samba/c\#\/mnt\/samba . Please use dietpi-config and the networking menu to setup this mount' /etc/fstab
+			sed -i '/\/mnt\/samba/c\#\/mnt\/samba . Please use dietpi-config and the Networking Options: NAS menu to setup this mount' /etc/fstab
 			#Add info file for installation method.
-			echo -e "Samba client can be installed and setup by DietPi-Config.\nSimply run: dietpi-config 8" > /mnt/samba/readme.txt
+			echo -e "Samba client can be installed and setup by DietPi-Config.\nSimply run: dietpi-config and select the Networking Options: NAS/Misc menu" > /mnt/samba/readme.txt
+
+		elif (( $1 == 110 )); then
+
+			umount /mnt/nfs_client &> /dev/null
+
+			AGP nfs-common
+
+			#Disable in fstab
+			sed -i '/\/mnt\/nfs_client/c\#\/mnt\/nfs_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount' /etc/fstab
+
+			#Add info file for installation method.
+			echo -e "NFS client can be installed and setup by DietPi-Config.\nSimply run: dietpi-config and select the Networking Options: NAS/Misc menu" > /mnt/nfs_client/readme.txt
 
 		elif (( $1 == 16 )); then
 
@@ -8143,10 +8209,10 @@ _EOF_
 			AGP curlftpfs
 
 			#Disable in fstab
-			sed -i '/\/mnt\/ftp_client/c\#\/mnt\/ftp_client . Please use dietpi-config and the networking menu to setup this mount' /etc/fstab
+			sed -i '/\/mnt\/ftp_client/c\#\/mnt\/ftp_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount' /etc/fstab
 
 			#Add info file for installation method.
-			echo -e "FTP client mount can be installed and setup by DietPi-Config.\nSimply run: dietpi-config 8" > /mnt/ftp_client/readme.txt
+			echo -e "FTP client mount can be installed and setup by DietPi-Config.\nSimply run: dietpi-config and select the Networking Options: NAS/Misc menu" > /mnt/ftp_client/readme.txt
 
 
 		elif (( $1 == 7 )); then
