@@ -27,8 +27,6 @@
 		INPUT=$1
 	fi
 
-	DISTRO=$(sed -n 3p /DietPi/dietpi/.hw_model)
-
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#curlftpfs data
 	#/////////////////////////////////////////////////////////////////////////////////////
@@ -41,15 +39,7 @@
 	Apply_And_Mount(){
 
 		#Apply to fstab
-
-		#Wheezy
-		if (( $DISTRO == 1 )); then
-			sed -i "/\/mnt\/ftp_client/c\curlftpfs#$curlftpfs_clientusername:$curlftpfs_clientpassword@$curlftpfs_clientaddress \/mnt\/ftp_client fuse auto,allow_other,direct_io,transform_symlinks,user,uid=1000,_netdev 0  0" /etc/fstab
-
-		#Jessie
-		elif (( $DISTRO == 3 )); then
-			sed -i "/\/mnt\/ftp_client/c\curlftpfs#$curlftpfs_clientusername:$curlftpfs_clientpassword@$curlftpfs_clientaddress \/mnt\/ftp_client fuse auto,allow_other,direct_io,transform_symlinks,user,uid=1000,nonempty,_netdev 0  0" /etc/fstab
-		fi
+		sed -i "/\/mnt\/ftp_client/c\curlftpfs#$curlftpfs_clientusername:$curlftpfs_clientpassword@$curlftpfs_clientaddress \/mnt\/ftp_client fuse auto,allow_other,direct_io,transform_symlinks,user,uid=1000,nonempty,_netdev 0  0" /etc/fstab
 
 		#Mount up
 		mount -a &> /dev/null
