@@ -27,8 +27,6 @@
 		INPUT=$1
 	fi
 
-	DISTRO=$(sed -n 3p /DietPi/dietpi/.hw_model)
-
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#smbclient data
 	#/////////////////////////////////////////////////////////////////////////////////////
@@ -42,15 +40,7 @@
 	Apply_And_Mount(){
 
 		#Apply to fstab
-
-		#Wheezy
-		if (( $DISTRO == 1 )); then
-			sed -i "/\/mnt\/samba/c\\/\/$samba_clientname\/$samba_clientshare \/mnt\/samba cifs username=$samba_clientusename,password=$samba_clientpassword,_netdev,iocharset=utf8,sec=ntlm  0  0" /etc/fstab
-
-		#Jessie
-		elif (( $DISTRO == 3 )); then
-			sed -i "/\/mnt\/samba/c\\/\/$samba_clientname\/$samba_clientshare \/mnt\/samba cifs username=$samba_clientusename,password=$samba_clientpassword,_netdev,iocharset=utf8,sec=ntlm,nofail  0  0" /etc/fstab
-		fi
+		sed -i "/\/mnt\/samba/c\\/\/$samba_clientname\/$samba_clientshare \/mnt\/samba cifs username=$samba_clientusename,password=$samba_clientpassword,_netdev,iocharset=utf8,sec=ntlm,nofail  0  0" /etc/fstab
 
 		#Mount up
 		mount -a &> /dev/null
