@@ -1499,6 +1499,24 @@ _EOF_
 		#add HFS+ FS support for all DietPi systems by default: https://github.com/Fourdee/DietPi/issues/271#issuecomment-245651818
 		apt-get install -y hfsplus #hfsprogs is for format capabilities
 		#-------------------------------------------------------------------------------
+		#NFS: https://github.com/Fourdee/DietPi/issues/246
+		mkdir -p /mnt/nfs_client
+		echo -e "NFS client can be installed and setup by DietPi-Config.\nSimply run: dietpi-config and select the Networking Options: NAS/Misc menu" > /mnt/nfs_client/readme.txt
+
+		# - fstab template entry
+		if (( ! $(cat /etc/fstab | grep -ci -m1 '/mnt/nfs_client') )); then
+
+			echo -e "\n#NFS Client Mount--------------------------------------------------\n#/mnt/nfs_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount" >> /etc/fstab
+
+		fi
+
+		# - dietpi.txt entries
+		if (( ! $(cat /DietPi/dietpi.txt | grep -ci -m1 '^nfsclient_ipaddress=') )); then
+
+			echo -e "\nnfsclient_ipaddress=" >> /DietPi/dietpi.txt
+
+		fi
+		#-------------------------------------------------------------------------------
 
 	fi
 
