@@ -2,6 +2,8 @@ v131
 (xx/09/16)
 
 Changes / Improvements / Optimizations:
+DietPi-Software | Added installation options for NFS server and client: https://github.com/Fourdee/DietPi/issues/246
+DietPi-Config | Added ability to mount NFS shares in Networking: NAS menu.
 Raspberry Pi | Image download updated to v130 and firmware 4.4.19: http://dietpi.com/download
 General | USB drives will be mounted automaticaly to /mnt/usb_[index] when plugged in: https://github.com/Fourdee/DietPi/issues/501
 General | Dedicated USB drive setup will now set the UUID in /etc/fstab
